package ui;

/**
 * StartApp class.
 */
public class StartApp {
  public static void main(String[] args) {
    StonkApp.launch(StonkApp.class, args);
  }
}
